style and script urls fixed

--- a/about.html
+++ b/about.html
@@ -43,10 +43,10 @@
             <nav
               class="d-flex justify-content-between align-items-center h-100 w-75 m-auto"
             >
-              <a href="/" class="nav-link">Home</a>
-              <a href="/about.html" class="nav-link">About</a>
-              <a href="/products.html" class="nav-link">Products</a>
-              <a href="/contact.html" class="nav-link">Contact</a>
+              <a href="index.html" class="nav-link">Home</a>
+              <a href="about.html" class="nav-link">About</a>
+              <a href="products.html" class="nav-link">Products</a>
+              <a href="contact.html" class="nav-link">Contact</a>
             </nav>
           </div>
           <div
@@ -389,7 +389,7 @@
       crossorigin="anonymous"
     ></script>
 
-    <script src="/scripts/sliders.js"></script>
-    <script src="/scripts/main.js"></script>
+    <script src="scripts/sliders.js"></script>
+    <script src="scripts/main.js"></script>
   </body>
 </html>
