--- a/contact.html
+++ b/contact.html
@@ -43,10 +43,10 @@
             <nav
               class="d-flex justify-content-between align-items-center h-100 w-75 m-auto"
             >
-              <a href="/" class="nav-link">Home</a>
-              <a href="/about.html" class="nav-link">About</a>
-              <a href="/products.html" class="nav-link">Products</a>
-              <a href="/contact.html" class="nav-link">Contact</a>
+              <a href="index.html" class="nav-link">Home</a>
+              <a href="about.html" class="nav-link">About</a>
+              <a href="products.html" class="nav-link">Products</a>
+              <a href="contact.html" class="nav-link">Contact</a>
             </nav>
           </div>
           <div
@@ -409,7 +409,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 
-    <script src="/scripts/sliders.js"></script>
-    <script src="/scripts/main.js"></script>
+    <script src="scripts/sliders.js"></script>
+    <script src="scripts/main.js"></script>
   </body>
 </html>
