--- a/layout.html
+++ b/layout.html
@@ -13,7 +13,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="/styles/style.css">
+    <link rel="stylesheet" href="styles/style.css">
     <title>Layoult</title>
 </head>
 
@@ -25,10 +25,10 @@
             </div>
             <div class="navbar">
                 <ul id="menu">
-                    <li><a href="/">Home</a></li>
-                    <li><a href="/about.html">About</a></li>
-                    <li><a href="/products.html">Product</a></li>
-                    <li><a href="/contact.html">Contact</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="products.html">Product</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                 </ul>
             </div>
             <nav>
@@ -79,10 +79,10 @@
                         </h4>
                         <div id="linkList" class="dropdown-footer">
                             <ul>
-                                <li><a href="/">Home</a></li>
-                                <li><a href="/about.html">About</a></li>
-                                <li><a href="/products.html">Products</a></li>
-                                <li><a href="/contact.html">Contact</a></li>
+                                <li><a href="index.html">Home</a></li>
+                                <li><a href="about.html">About</a></li>
+                                <li><a href="products.html">Products</a></li>
+                                <li><a href="contact.html">Contact</a></li>
                             </ul>
                         </div>
                     </div>
@@ -120,8 +120,8 @@
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 
-    <script src="/scripts/sliders.js"></script>
-    <script src="/scripts/main.js"></script>
+    <script src="scripts/sliders.js"></script>
+    <script src="scripts/main.js"></script>
 
 </body>
 
