--- a/products.html
+++ b/products.html
@@ -26,7 +26,7 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/styles/style.css" />
+    <link rel="stylesheet" href="styles/style.css" />
     <title>Header</title>
   </head>
 
@@ -42,10 +42,10 @@
             <nav
               class="d-flex justify-content-between align-items-center h-100 w-75 m-auto"
             >
-              <a href="/" class="nav-link">Home</a>
-              <a href="/about.html" class="nav-link">About</a>
-              <a href="/products.html" class="nav-link">Products</a>
-              <a href="/contact.html" class="nav-link">Contact</a>
+              <a href="index.html" class="nav-link">Home</a>
+              <a href="about.html" class="nav-link">About</a>
+              <a href="products.html" class="nav-link">Products</a>
+              <a href="contact.html" class="nav-link">Contact</a>
             </nav>
           </div>
           <div
@@ -378,7 +378,7 @@
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
-    <script src="/scripts/sliders.js"></script>
-    <script src="/scripts/main.js"></script>
+    <script src="scripts/sliders.js"></script>
+    <script src="scripts/main.js"></script>
   </body>
 </html>
