some issues fixed

--- a/about.html
+++ b/about.html
@@ -121,7 +121,7 @@
             <div
               class="col-lg-5 col-12 p-lg-0 d-flex justify-content-center align-items-center"
             >
-              <img src="./images/home/about_us_img1.jpg" class="w-100 h-100 object-cover" alt="" />
+              <img src="images/home/about_us_img1.jpg" class="w-100 h-100 object-cover" alt="" />
             </div>
             <div
               class="col-lg-7 col-12 px-lg-5 px-3 order-lg-0 order-first d-flex flex-column justify-content-center"
@@ -170,7 +170,7 @@
             <div
               class="col-lg-5 col-12 p-lg-0 d-flex justify-content-center align-items-center"
             >
-              <img src="./images/home/about_us_img2.jpg" class="w-100 h-100 object-cover" alt="" />
+              <img src="images/home/about_us_img2.jpg" class="w-100 h-100 object-cover" alt="" />
             </div>
           </div>
         </div>
