--- a/detail.html
+++ b/detail.html
@@ -122,7 +122,7 @@
       <section>
         <div class="container detail-img">
           <img
-            src="./images/products/product1.jpeg"
+            src="images/products/product1.jpeg"
             class="w-100 h-100"
             alt=""
           />
@@ -142,42 +142,42 @@
           <div class="swiper-wrapper">
             <div class="swiper-slide">
               <img
-                src="./images/products/product12.jpeg"
+                src="images/products/product12.jpeg"
                 class="w-100 h-100"
                 alt=""
               />
             </div>
             <div class="swiper-slide">
               <img
-                src="./images/products/product11.jpg"
+                src="images/products/product11.jpg"
                 class="w-100 h-100"
                 alt=""
               />
             </div>
             <div class="swiper-slide">
               <img
-                src="./images/products/product10.jpg"
+                src="images/products/product10.jpg"
                 class="w-100 h-100"
                 alt=""
               />
             </div>
             <div class="swiper-slide">
               <img
-                src="./images/products/product9.jpeg"
+                src="images/products/product9.jpeg"
                 class="w-100 h-100"
                 alt=""
               />
             </div>
             <div class="swiper-slide">
               <img
-                src="./images/products/product8.jpg"
+                src="images/products/product8.jpg"
                 class="w-100 h-100"
                 alt=""
               />
             </div>
             <div class="swiper-slide">
               <img
-                src="./images/products/product6.jpg"
+                src="images/products/product6.jpg"
                 class="w-100 h-100"
                 alt=""
               />
