--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
           <div class="swiper-wrapper">
             <div class="swiper-slide rounded-4 overflow-hidden">
               <div class="single-product-slide position-relative">
-                <img src="./images/products/product1.jpeg" />
+                <img src="images/products/product1.jpeg" />
                 <div
                   class="h-25 main-bg position-absolute bottom-0 w-100 text-light text-start d-flex flex-column justify-content-center p-3"
                 >
@@ -195,7 +195,7 @@
             </div>
             <div class="swiper-slide rounded-4 overflow-hidden">
               <div class="single-product-slide position-relative">
-                <img src="./images/products/product2.jpg" />
+                <img src="images/products/product2.jpg" />
                 <div
                   class="h-25 main-bg position-absolute bottom-0 w-100 text-light text-start d-flex flex-column justify-content-center p-3"
                 >
@@ -206,7 +206,7 @@
             </div>
             <div class="swiper-slide rounded-4 overflow-hidden">
               <div class="single-product-slide position-relative">
-                <img src="./images/products/product3.jpeg" />
+                <img src="images/products/product3.jpeg" />
                 <div
                   class="h-25 main-bg position-absolute bottom-0 w-100 text-light text-start d-flex flex-column justify-content-center p-3"
                 >
@@ -217,7 +217,7 @@
             </div>
             <div class="swiper-slide rounded-4 overflow-hidden">
               <div class="single-product-slide position-relative">
-                <img src="./images/products/product4.jpg" />
+                <img src="images/products/product4.jpg" />
                 <div
                   class="h-25 main-bg position-absolute bottom-0 w-100 text-light text-start d-flex flex-column justify-content-center p-3"
                 >
@@ -228,7 +228,7 @@
             </div>
             <div class="swiper-slide rounded-4 overflow-hidden">
               <div class="single-product-slide position-relative">
-                <img src="./images/products/product5.jpg" />
+                <img src="images/products/product5.jpg" />
                 <div
                   class="h-25 main-bg position-absolute bottom-0 w-100 text-light text-start d-flex flex-column justify-content-center p-3"
                 >
@@ -239,7 +239,7 @@
             </div>
             <div class="swiper-slide rounded-4 overflow-hidden">
               <div class="single-product-slide position-relative">
-                <img src="./images/products/product6.jpg" />
+                <img src="images/products/product6.jpg" />
                 <div
                   class="h-25 main-bg position-absolute bottom-0 w-100 text-light text-start d-flex flex-column justify-content-center p-3"
                 >
@@ -263,7 +263,7 @@
           <div class="swiper-wrapper">
             <div class="swiper-slide rounded-4 overflow-hidden">
               <div class="single-chosen-slide position-relative">
-                <img src="./images/products/product12.jpeg" alt="" class="" />
+                <img src="images/products/product12.jpeg" alt="" class="" />
                 <div
                   class="position-absolute bottom-0 left-0 main-bg w-100 text-light p-2"
                 >
@@ -274,7 +274,7 @@
 
             <div class="swiper-slide rounded-4 overflow-hidden">
               <div class="single-chosen-slide position-relative">
-                <img src="./images/products/product11.jpg" alt="" />
+                <img src="images/products/product11.jpg" alt="" />
                 <div
                   class="position-absolute bottom-0 left-0 main-bg w-100 text-light p-2"
                 >
@@ -285,7 +285,7 @@
 
             <div class="swiper-slide rounded-4 overflow-hidden">
               <div class="single-chosen-slide position-relative">
-                <img src="./images/products/product10.jpg" alt="" />
+                <img src="images/products/product10.jpg" alt="" />
                 <div
                   class="position-absolute bottom-0 left-0 main-bg w-100 text-light p-2"
                 >
@@ -296,7 +296,7 @@
 
             <div class="swiper-slide rounded-4 overflow-hidden">
               <div class="single-chosen-slide position-relative">
-                <img src="./images/products/product9.jpeg" alt="" />
+                <img src="images/products/product9.jpeg" alt="" />
                 <div
                   class="position-absolute bottom-0 left-0 main-bg w-100 text-light p-2"
                 >
@@ -307,7 +307,7 @@
 
             <div class="swiper-slide rounded-4 overflow-hidden">
               <div class="single-chosen-slide position-relative">
-                <img src="./images/products/product8.jpg" alt="" />
+                <img src="images/products/product8.jpg" alt="" />
                 <div
                   class="position-absolute bottom-0 left-0 main-bg w-100 text-light p-2"
                 >
@@ -318,7 +318,7 @@
 
             <div class="swiper-slide rounded-4 overflow-hidden">
               <div class="single-chosen-slide position-relative">
-                <img src="./images/products/product7.jpg" alt="" />
+                <img src="images/products/product7.jpg" alt="" />
                 <div
                   class="position-absolute bottom-0 left-0 main-bg w-100 text-light p-2"
                 >
@@ -348,7 +348,7 @@
                 class="border position-relative rounded-4 overflow-hidden single-statistic-box"
               >
                 <img
-                  src="./images/home/statistic_bg1.jpg"
+                  src="images/home/statistic_bg1.jpg"
                   class="w-100"
                   alt=""
                 />
@@ -364,7 +364,7 @@
                 class="border position-relative rounded-4 overflow-hidden single-statistic-box"
               >
                 <img
-                  src="./images/home/statistic_bg2.jpg"
+                  src="images/home/statistic_bg2.jpg"
                   class="w-100"
                   alt=""
                 />
@@ -380,7 +380,7 @@
                 class="border position-relative rounded-4 overflow-hidden single-statistic-box"
               >
                 <img
-                  src="./images/home/statistic_bg3.jpg"
+                  src="images/home/statistic_bg3.jpg"
                   class="w-100"
                   alt=""
                 />
