--- a/products.html
+++ b/products.html
@@ -87,7 +87,7 @@
               <div class="offcanvas-body">
                 <ul class="text-center fs-2 w-75 m-auto p-0">
                   <li>
-                    <a href="/" class="nav-link my-4 border-bottom">Home</a>
+                    <a href="index.html" class="nav-link my-4 border-bottom">Home</a>
                   </li>
                   <li>
                     <a href="about.html" class="nav-link my-4 border-bottom"
@@ -126,7 +126,7 @@
             class="col-md-8 col-6 product d-flex flex-column justify-content-between"
           >
             <img
-              src="./images/products/product1.jpeg"
+              src="images/products/product1.jpeg"
               alt=""
               class="w-100"
             />
@@ -137,7 +137,7 @@
             class="col-md-4 col-6 product d-flex flex-column justify-content-between"
           >
             <img
-              src="./images/products/product2.jpg"
+              src="images/products/product2.jpg"
               alt=""
               class="w-100"
             />
@@ -148,7 +148,7 @@
             class="col-md-4 col-6 product d-flex flex-column justify-content-between"
           >
             <img
-              src="./images/products/product3.jpeg"
+              src="images/products/product3.jpeg"
               alt=""
               class="w-100"
             />
@@ -159,7 +159,7 @@
             class="col-md-4 col-6 product d-flex flex-column justify-content-between"
           >
             <img
-              src="./images/products/product4.jpg"
+              src="images/products/product4.jpg"
               alt=""
               class="w-100"
             />
@@ -170,7 +170,7 @@
             class="col-md-4 col-6 product d-flex flex-column justify-content-between"
           >
             <img
-              src="./images/products/product5.jpg"
+              src="images/products/product5.jpg"
               alt=""
               class="w-100"
             />
@@ -181,7 +181,7 @@
             class="col-md-4 col-6 product d-flex flex-column justify-content-between"
           >
             <img
-              src="./images/products/product6.jpg"
+              src="images/products/product6.jpg"
               alt=""
               class="w-100"
             />
@@ -192,7 +192,7 @@
             class="col-md-8 col-6 product d-flex flex-column justify-content-between"
           >
             <img
-              src="./images/products/product7.jpg"
+              src="images/products/product7.jpg"
               alt=""
               class="w-100"
             />
