some issues fixed

--- a/about.html
+++ b/about.html
@@ -183,22 +183,22 @@
             <div class="swiper about-mySwiper">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
-                        <img src="/images/image_48.png" alt="">
+                        <img src="images/image_48.png" alt="">
                     </div>
                     <div class="swiper-slide">
-                        <img src="/images/image_50.png" alt="">
+                        <img src="images/image_50.png" alt="">
                     </div>
                     <div class="swiper-slide">
-                        <img src="/images/certificate-31.jpg" alt="">
+                        <img src="images/certificate-31.jpg" alt="">
                     </div>
                     <div class="swiper-slide">
-                        <img src="/images/certificate-31.jpg" alt="">
+                        <img src="images/certificate-31.jpg" alt="">
                     </div>
                     <div class="swiper-slide">
-                        <img src="/images/image_50.png" alt="">
+                        <img src="images/image_50.png" alt="">
                     </div>
                     <div class="swiper-slide">
-                        <img src="/images/image_51.png" alt="">
+                        <img src="images/image_51.png" alt="">
                     </div>
                 </div>
                 <div class="swiper-pagination"></div>
