--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
               class="col-lg-5 col-12 p-lg-0 d-flex justify-content-center align-items-center"
             >
               <img
-                src="/images/home/about_us_img2.jpg"
+                src="images/home/about_us_img2.jpg"
                 class="w-100 h-100"
                 alt=""
               />
@@ -609,6 +609,6 @@
     ></script>
 
     <script src="scripts/main.js"></script>
-    <script src="scripts/main.js"></script>
+    <script src="scripts/sliders.js"></script>
   </body>
 </html>
